issue #4 fix incoming with site not responding on safari

--- a/css/tech.css
+++ b/css/tech.css
@@ -21,7 +21,7 @@
         .form_hover .header {
             position: absolute;
             top: 290px;
-            -webkit-transition: -webkit-transform all 0.3s ease;
+            -webkit-transition: -webkit-transform color 0.3s ease;
             -moz-transition: all 0.3s ease;
             -o-transition: all 0.3s ease;
             -ms-transition: all 0.3s ease;
